--- a/packages/map-core/Map.stories.mdx
+++ b/packages/map-core/Map.stories.mdx
@@ -1,7 +1,7 @@
 import { Meta, Preview, Story, Props, Source, Description } from '@storybook/addon-docs/blocks';
 import { withKnobs, object, number, boolean, text } from '@storybook/addon-knobs'
 import { RplContainer, RplRow, RplCol } from '@dpc-sdp/ripple-grid'
-import { MyVicDataBlock as DataBlock } from '@dpc-sdp/myvic-data-block'
+import { MyvicDataBlock as DataBlock } from '@dpc-sdp/myvic-data-block'
 import {
   MyvicMapCore,
   MyvicMapVectorLayer,
