--- a/packages/PieChart/PieChart.stories.mdx
+++ b/packages/PieChart/PieChart.stories.mdx
@@ -38,7 +38,7 @@ import { PieChart } from '@dpc-sdp/myvic-pie-chart'
 ### Data Format
 The data object that should contain the following keys:
 - labels: an array of values for one of the axes. In the case of a pie chart this would be the X-axis
-- datasets: an array of objects (minimum 1 required - maximum of 4) that contain the following keys:
+- datasets: an array of objects (minimum 1 required) that contain the following keys:
   - label (String): a label for this dataset
   - data (Array): the values for this dataset. The length of this should match the length of the labels key
 
