--- a/packages/BarChart/BarChart.stories.mdx
+++ b/packages/BarChart/BarChart.stories.mdx
@@ -3,7 +3,7 @@ import BarChart from './index.vue'
 import { withKnobs, text, boolean, select, object } from '@storybook/addon-knobs'
 import { RplContainer, RplRow, RplCol } from '@dpc-sdp/ripple-grid'
 import _merge from 'lodash.merge'
-import { barChartTemplate, stackedBarChartTemplate, chartData, dualChartData } from './storiesConstants.js'
+import { barChartTemplate, stackedBarChartTemplate, chartData, dualChartData, maxChartData } from './storiesConstants.js'
 
 <Meta title="Bar Chart" component={ BarChart } decorators={ [withKnobs] } />
 
@@ -38,7 +38,7 @@ import { BarChart } from '@dpc-sdp/myvic-bar-chart'
 ### Data Format
 The data object that should contain the following keys:
 - labels: an array of values for one of the axes. In the case of a horizontal bar chart this would be the Y-axis
-- datasets: an array of objects (minimum 1 required - maximum of 4) that contain the following keys:
+- datasets: an array of objects (minimum 1 required - maximum of 12) that contain the following keys:
   - label (String): a label for this dataset
   - data (Array): the values for this dataset. The length of this should match the length of the labels key
 
@@ -148,6 +148,30 @@ The data object that should contain the following keys:
         direction: { default: () => 'horizontal' },
         title: { default: () => 'Dual Chart' },
         data: { default: () => dualChartData },
+        showLegend: { default: () => true },
+        dataFormat: { default: () => 'normal' }
+       }
+      }
+    }
+  </Story>
+</Preview>
+
+## Maximum Datasets
+
+<Preview>
+  <Story name="Maximum datasets">
+    {
+      {
+       components: { BarChart },
+       template: `
+        <div style="width: 1200px; height: 600px">
+          <bar-chart :title="title" :direction="direction" :data="data" :showLegend="showLegend" :dataFormat="dataFormat" />
+        </div>
+      `,
+       props: {
+        direction: { default: () => 'vertical' },
+        title: { default: () => 'Maximum possible datasets' },
+        data: { default: () => maxChartData },
         showLegend: { default: () => true },
         dataFormat: { default: () => 'normal' }
        }
