--- a/packages/AddressSearchMap/AddressSearchMap.stories.mdx
+++ b/packages/AddressSearchMap/AddressSearchMap.stories.mdx
@@ -40,6 +40,7 @@ import { AddressSearchMap } from '@dpc-sdp/myvic-address-search-map'
         components: { AddressSearchMap },
         template: `<address-search-map
           :geocodeProvider="geocodeProvider"
+          :vicmapAddressAPIKey="vicmapAddressAPIKey"
           :minQueryLength="minQueryLength"
           :showSuburb="showSuburb"
           :showMetroBoundary="showMetroBoundary"
@@ -49,7 +50,10 @@ import { AddressSearchMap } from '@dpc-sdp/myvic-address-search-map'
         />`,
         props: {
           geocodeProvider: {
-            default: () => select('geocodeProvider', { DELWP: 'DELWP', Mapbox: 'Mapbox' }, 'DELWP')
+            default: () => select('geocodeProvider', { VicmapAddressAPI: 'VicmapAddressAPI', DELWP: 'DELWP', Mapbox: 'Mapbox' }, 'VicmapAddressAPI')
+          },
+          vicmapAddressAPIKey: {
+            default: text('vicmapAddressAPIKey', '')
           },
           minQueryLength: {
             default: number('minQueryLength', 6,
