feat: Add option to choose Vicmap or Mapbox basemap on AddressSearchMap

--- a/packages/AddressSearchMap/AddressSearchMap.stories.mdx
+++ b/packages/AddressSearchMap/AddressSearchMap.stories.mdx
@@ -39,6 +39,7 @@ import { AddressSearchMap } from '@dpc-sdp/myvic-address-search-map'
       {
         components: { AddressSearchMap },
         template: `<address-search-map
+          :basemapProvider="basemapProvider"
           :geocodeProvider="geocodeProvider"
           :vicmapAddressAPIKey="vicmapAddressAPIKey"
           :minQueryLength="minQueryLength"
@@ -49,6 +50,9 @@ import { AddressSearchMap } from '@dpc-sdp/myvic-address-search-map'
           :radiusLabel="radiusLabel"
         />`,
         props: {
+          basemapProvider: {
+            default: () => select('basemapProvider', { Vicmap: 'Vicmap', Mapbox: 'Mapbox' }, 'Mapbox')
+          },
           geocodeProvider: {
             default: () => select('geocodeProvider', { VicmapAddressAPI: 'VicmapAddressAPI', DELWP: 'DELWP', Mapbox: 'Mapbox' }, 'VicmapAddressAPI')
           },
